link to cengage

--- a/wk02/index.html
+++ b/wk02/index.html
@@ -10,6 +10,7 @@
 <h1>CTEC-170 Windows Server wk02</h1>
 <pre>
 Purchased Digital Book / Coursework for CTEC-170 Windows Server Class
+<a href="https://www.cengage.com/dashboard#/my-dashboard/?page=">Link to Cengage</a>
 </pre>
 </body>
 </html>
