--- a/wk02/index.html
+++ b/wk02/index.html
@@ -11,6 +11,52 @@
 <pre>
 Purchased Digital Book / Coursework for CTEC-170 Windows Server Class
 <a href="https://www.cengage.com/dashboard#/my-dashboard/?page=">Link to Cengage</a>
+**************************************************************************************
+
+<h2>1.1 Using Windows Server 2019 Within an Orginization</h2>
+<h3>1.1a Understanding Windows Server Virtualization</h3>
+<h3>1.1b Understanding Windows Containers</h3>
+
+<h2>1.2 Windows Server 2019 Features</h2>
+<h3>1.2a Active Directory</h3>
+<h3>1.2b Security</h3>
+<h3>1.2c Volume and Filesystems Features</h3>
+<h3>1.2d Performance and Reliability</h3>
+<h3>1.2e Administration Tools</h3>
+<h3>1.2f Small Footprint Installation Options</h3>
+<h3>1.2g Hybrid Cloud Features</h3>
+<h3>1.2h Linux Application Support</h3>
+
+<h2>1.3 Windows Server 2019 Editions</h2>
+<h3>1.3a Windows Server 2019 Essential</h3>
+<h3>1.3b Windows Server 2019 Standard</h3>
+<h3>1.3c Windows Server 2019 Datacenter</h3>
+<h3>1.3d Windows Storage Server</h3>
+<h3>1.3e Microsoft Hyper-V</h3>
+
+<h2>1.4 Preparing for a Windows Server 2019 Installation</h2>
+
+<h2>1.5 Installing Windows Server 2019</h2>
+<h3>1.5a Obtaining installation Media</h3>
+<h3>1.5b Starting the Installation Process</h3>
+<h3>1.5c Completing the Installation Process</h3>
+
+<h2>1.6 Post-Installation Configuration</h2>
+<h3>1.6a Setting the Correct Time and Time Zone</h3>
+<h3>1.6b Configuring the Network</h3>
+<h3>1.6c Configuring the Firewall</h3>
+<h3>1.6d Changing Default Computer Name and Domain Membership</h3>
+<h3>1.6e Installing a Modern Web Browser</h3>
+<h3>1.6f Activating the Windows Server Operating System</h3>
+
+<h2>1.7 Selecting a Windows Server 2019 Lab Environment</h2>
+
+<h2>1.8 Module Review</h2>
+<h3>1.8a Module Summary</h3>
+<h3>1.8b Key Terms</h3>
+<h3>1.8c Review Questions</h3>
+<h3>1.8d Hands-On Projects</h3>
+<h3>1.8e Discovery Exercises</h3>
 </pre>
 </body>
 </html>
