started watching videos

--- a/wk02/index.html
+++ b/wk02/index.html
@@ -115,6 +115,30 @@ in PowerShell - (ensure that VM1 can install Hyper-V);
 <h3>1.8c Review Questions</h3>
 <h3>1.8d Hands-On Projects</h3>
 <h3>1.8e Discovery Exercises</h3>
+
+<h2>Notes from Videos</h2>
+<h3>Chap 01 vid 01</h3>
+on premise servers - 1u and 2u size in rack mount
+<b>Blade Server - </b> 
+<b>SAN Storage Area Network - </b>
+
+<h3>Chap 01 vid 02</h3>
+Understanding Windows Server Virtualization
+
+
+<h3>Chap 01 vid 03</h3>
+
+
+
+<h3>Chap 01 vid 04</h3>
+Server Essential:
+Server Standard:
+Server Database:
+
+
+<h3>Chap 01 vid 05</h3>
+
+
 </pre>
 </body>
 </html>
