2nd video completed

--- a/wk02/index.html
+++ b/wk02/index.html
@@ -116,17 +116,27 @@ in PowerShell - (ensure that VM1 can install Hyper-V);
 <h3>1.8d Hands-On Projects</h3>
 <h3>1.8e Discovery Exercises</h3>
 
-<h2>Notes from Videos</h2>
+<h2>***Notes from Videos***</h2>
 <h3>Chap 01 vid 01</h3>
 on premise servers - 1u and 2u size in rack mount
 <b>Blade Server - </b> 
 <b>SAN Storage Area Network - </b>
 
-<h3>Chap 01 vid 02</h3>
-Understanding Windows Server Virtualization
+<h3>Chap 01 vid 02 Understanding Windows Server Virtualization</h3>
+<b>Hypervisor</b> - required to use virtualization
+     -<b>Type 1</b> - runs barebones (baremetal) computer system 
+     -<b>Type 2</b> - runs on-top of existing OS (like an app)
 
+Hypervisor requirements -- Hypervisor Acceleration and SLAT (Second Level Address Translation)
 
-<h3>Chap 01 vid 03</h3>
+VM Config file --
+
+VM Virtual HD -- Thick Provision -- allocates all the space (a little faster, takes more storage)
+                 Thin Provision -- dynamic allocate space 
+
+Nested Virtualization -- VMs inside of VMs
+
+<h3>Chap 01 vid 03 Understanding Windows Containers</h3>
 
 
 
@@ -137,6 +147,10 @@ Server Database:
 
 
 <h3>Chap 01 vid 05</h3>
+
+
+
+<h3>Chap 01 vid 06</h3>
 
 
 </pre>
