3rd video complete

--- a/wk02/index.html
+++ b/wk02/index.html
@@ -137,10 +137,19 @@ VM Virtual HD -- Thick Provision -- allocates all the space (a little faster, ta
 Nested Virtualization -- VMs inside of VMs
 
 <h3>Chap 01 vid 03 Understanding Windows Containers</h3>
+similar to VM -- packages an APP with all dependencies required
 
+<b>Sandboxing</b> - isolates web app from underlying OS
 
+<b>Docker</b> - common Container software
 
-<h3>Chap 01 vid 04</h3>
+<b>Kernel</b> - core operating system
+
+<b>Windows Containers</b> - Windows Server Components that allow you to use Docker, same kernel for all containers
+
+<b>Hyper-V container</b> - provide additional security features, seperate kernels per container 
+
+<h3>Chap 01 vid 04 Windows Server 2019 Features</h3>
 Server Essential:
 Server Standard:
 Server Database:
