--- a/wk02/index.html
+++ b/wk02/index.html
@@ -191,12 +191,32 @@ Kubernetes Software coordinates containers
 <b>Server Standard</b>: Licensed per CPU core, 24TB RAM, 64 CPU Sockets
         -- Hyper-V (2 VMs), Unlimited Containers, 2x Hyper-V Containers
 
-<b>Server Database</b>: Licensed Per CPU core, 24TB RAM, 64 CPU Sockets 
+<b>Server Datacenter</b>: Licensed Per CPU core, 24TB RAM, 64 CPU Sockets 
         -- Hyper-V (unlimited), Unlimited Containers, Unlimited Hyper-V containers
 
+<b>Windows Storage Server 2019</b> -- only a fileserver, available from OEM
 
+<b>Microsoft Hyper-V Server 2019</b> -- small footprint version of windows server with PowerShell
+        - windows OS machines need a valid license, but can run linux machines with no license
 
-<h3>Chap 01 vid 06</h3>
+<ol> Completing Installation Process
+    <li>Enter Regional Locale and Keyboard Format</li>
+    <li>Choose Start Install or Repair System</li>
+    <li>Select Windows Server 2019 edition</li>
+    <li>Select Install type: Custom or Upgrade</li>
+    <li>Select Windows Server OS storage location</li>
+    <li>Reboot and Specify password</li>
+</ol>
+<ol> Post-Installation
+    <li>Set Time and Time Zone</li>
+    <li>Configure IP</li> 
+    <li>Configure Firewall</li>
+    <li>Change Default Name and Domain</li>
+    <li>Install Web Browser</li>
+    <li>Activate Windows Server OS</li>
+</ol>
+
+<h3>Chap 01 vid 06 Configuring the Network</h3>
 
 
 </pre>
