some work complete

--- a/wk03/index.html
+++ b/wk03/index.html
@@ -9,7 +9,12 @@
 <body>
 <pre>
 <h1>CTEC-170 Windows Server wk03 Server Manager vs Windows Admin Center</h1>
-
+<h2>Lab 2.1 Server Manager</h2>
+In this Hands-On Project, you explore the different configuration and management features of Server Manager.
+<h2>Lab 2.2 Server Manager</h2>
+In this Hands-On Project, you install and explore the different configuration and management features of the Windows Admin Center.
+<h2>Lab 2.3</h2>
+<h2>Lab 2.4</h2>
 
 
 
