--- a/wk04/index.html
+++ b/wk04/index.html
@@ -11,9 +11,9 @@
 <h1>CTEC-170 Windows Server wk04 </h1>
 
 
-<h2>Lab</h2>
-<h2>Lab</h2>
-<h2>Lab</h2>
+<h2>Lab Hyper-V</h2>
+<h2>Lab Virtual Switches</h2>
+<h2>Lab WDS Configuration</h2>
 <h2>Lab</h2>
 
 </pre>    
