--- a/wk04/index.html
+++ b/wk04/index.html
@@ -14,7 +14,7 @@
 <h2>Lab Hyper-V</h2>
 <h2>Lab Virtual Switches</h2>
 <h2>Lab WDS Configuration</h2>
-<h2>Lab</h2>
+<h2>Lab WDS Deployment</h2>
 
 </pre>    
 </body>
