starting on laptop

--- a/wk06/index.html
+++ b/wk06/index.html
@@ -9,6 +9,14 @@
 <body>
 <pre>
 <h1>CTEC-170 wk06</h1>
+<h2>Lab: Cleanup</h2>
+<h2>Lab: Active Directory Install</h2>
+<h2>Lab: Functional Levels</h2>
+<h2>Lab: Sites</h2>
+<h2>Lab: Global Catalog</h2>
+<h2>Lab: Objects</h2>
+<h2>Lab: Active Directory Admin</h2>
+<h2>Lab: RODCs</h2>
 <h2>Summary</h2>
 - You can log into a system with a local user account to obtain rights and permissions to local resources. Local group accounts can be used to simplify the assignment of local rights 
    and permissions. Each local user and group account is stored within a SAM database on the system.
